[tool.poetry]
name = "chartinpython"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
xlrd = "^2.0.1"
pandas-datareader = "^0.9.0"
DateTime = "^4.3"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
